--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ant-design-vue": "^2.0.0-rc.8",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "enquire.js": "^2.1.6",
+    "lodash.clonedeep": "^4.5.0",
     "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
