--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "enquire.js": "^2.1.6",
     "lodash.clonedeep": "^4.5.0",
+    "markdown-it": "^12.0.4",
     "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
