--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build && sh cp-build.sh",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepare": "husky install"
+  },
+  "lint-staged":{
+    "*.{vue,js}":"eslint --fix"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-rc.8",
@@ -30,8 +34,10 @@
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "husky": "^6.0.0",
     "less": "^4.1.0",
-    "less-loader": "^7.2.1"
+    "less-loader": "^7.2.1",
+    "lint-staged": "^11.0.0"
   },
   "eslintConfig": {
     "root": true,
