--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint",
     "prepare": "husky install"
   },
-  "lint-staged":{
-    "*.{vue,js}":"eslint --fix"
+  "lint-staged": {
+    "*.{vue,js}": "eslint --fix"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-rc.8",
@@ -24,6 +24,8 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -32,6 +34,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
+    "commitizen": "^4.2.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "husky": "^6.0.0",
