--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "enquire.js": "^2.1.6",
+    "kuan-utils": "^2.1.3",
     "lodash.clonedeep": "^4.5.0",
     "markdown-it": "^12.0.4",
     "nprogress": "^0.2.0",
