--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ant-design-vue": "^2.0.0-rc.8",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
     "enquire.js": "^2.1.6",
     "kuan-utils": "^2.1.3",
     "lodash.clonedeep": "^4.5.0",
